--- a/app/src/main/res/layout/keyboard_layout.xml
+++ b/app/src/main/res/layout/keyboard_layout.xml
@@ -23,7 +23,7 @@
         <ImageButton
             android:id="@+id/btnAccept"
             android:src="@drawable/ic_accept"
-            android:background="@color/lightGrey"
+            android:background="@color/green"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="0.5"
@@ -80,7 +80,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white">
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/pager_left"
+                    android:layout_height="99dp"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:background="@color/white"
+                    android:layout_gravity="left">
+                </Button>
+                <Button
+                    android:id="@+id/pager_right"
+                    android:layout_height="99dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:background="@color/white"
+                    android:layout_gravity="right">
+                </Button>
+            </LinearLayout>
+            <Button
+                android:layout_height="20dp"
+                android:layout_width="match_parent"
+                android:background="@color/white"
+                android:layout_gravity="bottom">
+            </Button>
             <android.support.v4.view.ViewPager
                 android:layout_width="200dp"
                 android:id="@+id/pagerView"
